head tags (META)

--- a/HTML_Prac/Headtags.html
+++ b/HTML_Prac/Headtags.html
@@ -14,6 +14,12 @@
     <meta http-equiv="referesh" content="30">
     <meta name="Keyword" content="WEB DEV APP PRAC">
     <meta name="Descriotion" content="By Hitesh Chawdhary">
+    <script></script>
+     <!--For JS  -->
+     <style>
+        /* For CSS */
+     </style>
+     <!-- READ BASE TAG -->
 </head>
 
 <body>
