--- a/HTML_Prac/Forms.html
+++ b/HTML_Prac/Forms.html
@@ -15,7 +15,8 @@
         <input type="text" placeholder="First name" name="" id="fname"><br>
         <label for="Lname">LAST NAME </label>
         <input type="text" placeholder="Last name" name="" id="Lname"><br>
-        
+        <Button type="submit"> Go ahead</Button>
+
     </form>
 </body>
 </html>
