--- a/HTML_Prac/Forms.html
+++ b/HTML_Prac/Forms.html
@@ -12,9 +12,34 @@
 
         <!-- Types of Input in FORMS -->
         <label for="Fname">FIRST NAME </label>
-        <input type="text" placeholder="First name" name="" id="fname"><br>
+        <input type="text" placeholder="First name" name="" id="fname">
+        <br><br>
         <label for="Lname">LAST NAME </label>
-        <input type="text" placeholder="Last name" name="" id="Lname"><br>
+        <input type="text" placeholder="Last name" name="" id="Lname">
+        <br><br>
+        <label for="password">Password</label>
+        <input type="password" name="" id="">
+        <input type="week" name="" id="">
+        <br><br>
+        <label for="Language">Choose your favourite Language</label>
+        <Select name="Language">
+            <option value="C++">CPP</option>
+            <option value="Java">Java</option>
+            <option value="Python">Python</option>
+            <option value="Ruby">Ruby</option>
+            <option value="JavaScript">JavaScript</option>
+        </Select>
+        <br><br>
+        <label for="HTML&CSS">HTML&CSS</label>
+        <input type="range" name="HTML&CSS" id="HTML&CSS" min="12" max="15">
+        <br>
+        <label for="Cpp">C++</label>
+        <input type="range" name="Cpp" id="Cpp" min="8" max="15">
+        <br>
+        <label for="Java">Java</label>
+        <input type="range" name="Java" id="Java" min="4" max="15">
+        <br><br>
+        <input type="reset" value="Reset">
         <Button type="submit"> Go ahead</Button>
 
     </form>
