--- a/HTML_Prac/04_Formatting.html
+++ b/HTML_Prac/04_Formatting.html
@@ -15,10 +15,10 @@
     <P>This is <b>important<b></P><!-- not imp-->
     <p> This is Strong<strong></strong>  </p>
     <p> This is <i>important</i> </p> <!-- not imp-->
-    <p> This is <em>important</em> </p> 
+    <p> This is <em>important</em> </p> <!-- <em> marks text that has stress emphasis. -->
 
     <ul>
-        <li>b, Strong</li>
+        <li>b, Strong </li>
         <li>i, em</li>
         <li>small</li>
         <li>sub, sup</li>
