--- a/HTML_Prac/01_index.html
+++ b/HTML_Prac/01_index.html
@@ -17,7 +17,7 @@
     </footer>
     <h3 title="title is known as Attribute means 
     Properties">Element tag and Attribute</h3>
-    <h4>
+    <h4>istala bistala jitala
         <span>
             oasduhfs
         </span>
