Eg of Formats like sup del mark

--- a/HTML_Prac/04_Formatting.html
+++ b/HTML_Prac/04_Formatting.html
@@ -19,7 +19,7 @@
 
     <ul>
         <li>b, Strong </li>
-        <li>i, em</li>
+        <li>i, em(emphasis)</li>
         <li>small</li>
         <li>sub, sup</li>
         <li>del, mark</li>
@@ -28,6 +28,13 @@
     <!-- Sub tag eg-->
     <p>H<sub>2</sub>O</p>
 
+    <!-- Sup tag eg-->
+    <p>(a+b)<sup>2</sup></p>
+    <!-- Del(cross the work) tag eg-->
+    <p>haj<del>asdas</del></p>
+    <!-- Mark tag eg-->
+    <p>haj<mark>asdas</mark></p>
+    
     <!-- Styling in Html -->
     <h4 style=
     "text-align: center;
