--- a/HTML_Prac/05_colors.html
+++ b/HTML_Prac/05_colors.html
@@ -23,7 +23,7 @@
     <!-- head tag css -->
     <style>
         body{
-            background: rgba(163, 157, 162, 0.82);
+            background: rgba(163, 157, 162, );
             color: #ffffff;
         
         }
